--- a/src/components/VideoPlayer.css
+++ b/src/components/VideoPlayer.css
@@ -1,8 +1,13 @@
 #player_ctn {
     aspect-ratio: 16/9;
     height: auto;
+    min-height: 900px;
+
     width: 100svw;
     position: relative;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
 
     ::after {
         content: '';
@@ -19,11 +24,19 @@
     }
 }
 
-#video_ctn {
-    aspect-ratio: 16/9;
-    height: auto;
-    width: 100%;
+.video_ctn {
+  position: absolute;
+  width: auto;           /* Maintain original width */
+  height: 100%;          /* Full height of the container */
+  min-width: 100%;       /* Prevents shrinking */
+  object-fit: cover;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+    min-width: 1500px;
+    min-height: 900px;
 }
+
 
 @keyframes fadeIn {
     0% {
